Fix Movie.
Actors and directors must be mutable to add things.